# Particle_Rotation_Driven_Systems

./: README.md
Equalibrium_hematite_structures/: readme.txt
Equalibrium_hematite_structures/src/: CMakeLists.txt  calc.cpp  calc.h  calculate.cpp  calculate.h  main.cpp
Magnetic_superballs/: readme.txt
Magnetic_superballs/scripts/: a.py  axtest_N_2_Nv_92_omega_-0.95_F_0.001_alpha_0.94_.mpg  c.py  readme.txt  z.py
Magnetic_superballs/src/: CMakeLists.txt  integrator.cpp  integrator.h  main.cpp
espresso_scripts_for_hemate_cube_chains/: 2d_46.py  2d_46_gravity.py  2d_92_no_gravity.py  3d_46_no_gravity.py  highH_slim.py  lowH_slim.py  readme.txt
macroscopic_filement_precessing_field/: readme.txt
macroscopic_filement_precessing_field/src/: CMakeLists.txt  eigen_algebra.hpp  integrator.cpp  integrator.h  integrator1.cpp  integrator1.h  main (martins-laptop's conflicted copy 2023-06-11).cpp  main.cpp  simulation.cpp  simulation.h
microscopic_filement_precessing_field/: readme.txt
microscopic_filement_precessing_field/src/: CMakeLists.txt  eigen_algebra.hpp  integrator.cpp  integrator.h  main.cpp  simulation.cpp  simulation.h
mod_espresso_paramagnetic_and_precessing_field/: feromagnetic.py  paramagnetic.py  readme.txt
planar_chain_motion/: readme.txt
planar_chain_motion/src/: CMakeLists.txt  integrator.cpp  integrator.h  main.cpp
